# desktop-app

./: frostbyte.code-workspace  package.json  svelte.config.js  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account_manager.rs  file_manager.rs  keystore.rs  main.rs
src/config/: customSpec.json  customSpecRaw.json
src/lib/: Account.svelte  Accounts.svelte  App.svelte  Wallet.svelte  accounts.ts
src/lib/accounts/: Accounts.svelte  Wallet.svelte  accounts.ts
src/routes/: +page.svelte
