[package]
name = "frostbyte-app"
version = "0.0.0"
description = "Cross-platform desktop application for Frostbyte Games."
authors = ["Michael Assaf"]
license = ""
repository = "https://github.com/frostbyte-games/frostbyte-app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-write-file", "shell-open"] }
codec = { package = "parity-scale-codec", version = "3.2", features = [
    'derive',
] }
env_logger = "0.10.0"
log = { version = "0.4.14" }
tokio = { version = "1.23", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "full",
] }
wabt = "0.10.0"

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
kitchensink-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-identity = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
node-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { features = [
    "full_crypto",
], git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

# local deps
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", features = [
    "tungstenite-client",
    "ws-client",
    "staking-xt",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
bip39_rs = "0.6.0-beta.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
secrets = "1.2.0"
hex = "0.4.3"
openssl = "0.10.45"
sodiumoxide = "0.2.7"
base64 = "0.21.0"
schnorrkel = "0.10.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
